--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -25,9 +25,15 @@
         </div>
 
         <div class="tab-section">
-            <div class="tab active" data-tab="ranking">Ranking</div>
-            <div class="tab " data-tab="commands">Comandos</div>
-            <div class="tab " data-tab="comments">Comentarios de Usuarios</div>
+            <div class="tab active" data-tab="ranking">
+                <span>Ranking</span>
+            </div>
+            <div class="tab " data-tab="commands">
+                <span>Comandos</span>
+            </div>
+            <div class="tab " data-tab="comments">
+                <span>Comentarios de Usuarios</span>
+            </div>
         </div>
 
         <div class="content-container">
